# nc_py_api

./: .buildinfo  .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS  CHANGELOG.md  DevSetup.html  Dockerfile  FirstSteps.html  Installation.html  LICENSE.txt  MANIFEST.in  Makefile  MoreAPIs.html  NextcloudApp.html  NextcloudApp3rdParty.html  NextcloudSysApp.html  NextcloudTalkBot.html  NextcloudTalkBotTransformers.html  NextcloudUiApp.html  Options.html  README.md  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: .codecov.yml  CONTRIBUTING.md  SECURITY.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: analysis-coverage-status.yml  analysis-coverage-unrelated.yml  analysis-coverage.yml  docs-check.yml  docs.yml  father.yml  mother.yml  publish.yml  stale.yml  tests-status.yml
.run/: Skeleton (27).run.xml  Skeleton (28).run.xml  Skeleton (last).run.xml  Skeleton.run.xml  Speech2TxtProvider (last).run.xml  TalkBot (27).run.xml  TalkBot (28).run.xml  TalkBot (last).run.xml  TalkBot.run.xml  TalkBotAI (27).run.xml  TalkBotAI (28).run.xml  TalkBotAI (last).run.xml  TalkBotAI.run.xml  TalkBotMulti.run.xml  ToGif (27).run.xml  ToGif (28).run.xml  ToGif (last).run.xml  ToGif(28).run.xml  ToGif.run.xml  UiExample (27).run.xml  UiExample (28).run.xml  UiExample (last).run.xml  _app_security_checks.run.xml  aregister_nc_py_api (27).run.xml  aregister_nc_py_api (28).run.xml  aregister_nc_py_api (last).run.xml  register.run.xml  register_nc_py_api (26).run.xml  register_nc_py_api (27).run.xml  register_nc_py_api (28).run.xml  register_nc_py_api (last).run.xml  register_nc_py_api.run.xml  to_gif.run.xml
_modules/: index.html
_modules/nc_py_api/: _exceptions.html  _preferences.html  _preferences_ex.html  _session.html  _talk_api.html  _theming.html  activity.html  apps.html  calendar.html  calendar_api.html  files.html  loginflow_v2.html  nextcloud.html  notes.html  notifications.html  talk.html  talk_bot.html  user_status.html  users.html  users_groups.html  weather_status.html  webhooks.html
_sources/: DevSetup.rst.txt  Installation.rst.txt  NextcloudApp3rdParty.rst.txt  NextcloudTalkBot.rst.txt  index.rst.txt
_sources/benchmarks/: AppAPI.rst.txt
_sources/reference/: ExApp.rst.txt  LoginFlowV2.rst.txt  Nextcloud.rst.txt  Session.rst.txt  Webhooks.rst.txt  index.rst.txt
_static/: documentation_options.js
_static/css/: styles.css
api_demo/: README.md  main.py  requirements.txt  setup.sh
benchmarks/: AppAPI.html  aa_overhead_common.py  aa_overhead_dav_download.py  aa_overhead_dav_download_stream.py  aa_overhead_dav_upload.py  aa_overhead_dav_upload_stream.py  aa_overhead_ocs.py  ae_overhead_dav_download.py  ae_overhead_dav_download_stream.py  ae_overhead_dav_upload.py  ae_overhead_dav_upload_stream.py  ae_overhead_heavy_op.py  ae_overhead_light_op.py  ae_overhead_ocs.py  conf.py
docs/: DevSetup.rst  FirstSteps.rst  Installation.rst  Makefile  MoreAPIs.rst  Nextcloud.rst  NextcloudApp.rst  NextcloudSysApp.rst  NextcloudTalkBot.rst  NextcloudTalkBotTransformers.rst  NextcloudUiApp.rst  Options.rst  conf.py  index.rst
docs/benchmarks/: AppAPI.rst  AppEcosystem.rst  AppEcosystem_results.rst
docs/reference/: ActivityApp.rst  Apps.rst  Calendar.rst  Constants.rst  ExApp.rst  Exceptions.rst  Files.rst  Nextcloud.rst  Notes.rst  Session.rst  Shares.rst  Talk.rst  TalkBot.rst  Users.rst  UsersGroups.rst  UsersStatus.rst  WeatherStatus.rst  constants.rst  index.rst
examples/as_client/: circles_example.py  contacts_example.py  deck_example.py  file_comments_example.py  files_download.py  files_examples.py  files_listing.py  files_upload.py  forms_example.py  group_folders_example.py  oauth2_example.py  recommendations_example.py  system_tags_example.py
examples/to_gif/: main.py  requirements.txt
nc_py_api/: __init__.py  _deffered_error.py  _exceptions.py  _misc.py  _preferences.py  _preferences_ex.py  _session.py  _talk_api.py  _theming.py  _version.py  activity.py  appcfg_prefs_ex.py  appconfig_preferences_ex.py  apps.py  calendar.py  calendar_api.py  circles.py  constants.py  contacts.py  deck.py  exceptions.py  files.py  files_defs.py  files_sharing.py  forms.py  group_folders.py  gui.py  gui_defs.py  gui_files.py  integration_fastapi.py  loginflow_v2.py  misc.py  nextcloud.py  notes.py  notifications.py  oauth2.py  options.py  preferences.py  recommendations.py  system_tags.py  (+15 more)
nc_py_api/apps/: __init__.py  apps.py  preferences.py  preferences_ex.py
nc_py_api/ex_app/: __init__.py  defs.py  events_listener.py  integration_fastapi.py  logger.py  logging.py  misc.py  occ_commands.py  persist_transformers_cache.py  uvicorn_fastapi.py
nc_py_api/files/: __init__.py  _files.py  file_comments.py  files.py  files_async.py  fs_node.py  (+1 more)
reference/: ActivityApp.html  Apps.html  Calendar.html  ExApp.html  Exceptions.html  LoginFlowV2.html  Nextcloud.html  Notes.html  Session.html  Talk.html  TalkBot.html  Webhooks.html  index.html
scripts/: ci_register.sh  dev_register.sh
tests/: _app_security_checks.py  _install.py  _install_async.py  _install_init_handler_models.py  _install_init_handler_models_async.py  _install_only_enabled_handler.py  _install_only_enabled_handler_async.py  _install_wait.py  _talk_bot.py  _talk_bot_async.py  _tests_at_the_end.py  appcfg_prefs_ex_test.py  appconfig_preferences_ex_test.py  apps_test.py  conftest.py  files_sharing_test.py  files_test.py  gfixture.py  gfixture_set_env.py  groups_test.py  gui_files_test.py  logs_test.py  misc_test.py  nc_app_test.py  notifications_test.py  options_test.py  preferences_test.py  talk_test.py  theming_test.py  ui_file_actions_test.py  ui_files_test.py  user_status_test.py  users_groups_test.py  users_notifications_test.py  users_status_test.py  users_statuses_test.py  users_test.py  users_weather_test.py  weather_status_test.py  z_special.py  (+2 more)
tests_unit/: test_download_url.py  test_fetch_model_file.py  test_progress_reporter.py
(+163 files in other folders)
