[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.18",
]

[project]
name = "nc-py-api"
description = "Nextcloud Python Framework"
readme = "README.md"
keywords = [
  "api",
  "client",
  "framework",
  "library",
  "nextcloud",
]
license = "BSD-3-Clause"
authors = [
  { name = "Alexander Piskun", email = "bigcat88@icloud.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
  "version",
]
dependencies = [
  "fastapi>=0.109.2",
  "httpx>=0.25.2",
  "pydantic>=2.1.1",
  "python-dotenv>=1",
  "xmltodict>=0.13",
]
optional-dependencies.app = [
  "uvicorn[standard]>=0.23.2",
]
optional-dependencies.bench = [
  "matplotlib",
  "nc-py-api[app]",
  "numpy",
  "py-cpuinfo",
]
optional-dependencies.calendar = [
  "caldav==1.3.6",
]
optional-dependencies.dev = [
  "nc-py-api[bench,calendar,dev-min]",
]
optional-dependencies.dev-min = [
  "coverage",
  "huggingface-hub",
  "pillow",
  "pre-commit",
  "pylint",
  "pytest",
  "pytest-asyncio",
]
optional-dependencies.docs = [
  "autodoc-pydantic>=2.0.1",
  "nc-py-api[app,calendar]",
  "sphinx>=6.2",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-issues>=3.0.1",
  "sphinx-rtd-theme>=1",
]
urls.Changelog = "https://github.com/cloud-py-api/nc_py_api/blob/main/CHANGELOG.md"
urls.Documentation = "https://cloud-py-api.github.io/nc_py_api/"
urls.Source = "https://github.com/cloud-py-api/nc_py_api"

[tool.hatch.version]
path = "nc_py_api/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/nc_py_api",
  "/CHANGELOG.md",
  "/README.md",
]
exclude = [
  "Makefile",
]

[tool.black]
line-length = 120
target-versions = [
  "py310",
]
preview = true

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "PIE",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W",
]
lint.extend-ignore = [
  "D105",
  "D107",
  "D203",
  "D213",
  "D401",
  "I001",
  "RUF100",
]

lint.per-file-ignores."nc_py_api/__init__.py" = [
  "F401",
]
lint.per-file-ignores."nc_py_api/ex_app/__init__.py" = [
  "F401",
]
lint.extend-per-file-ignores."benchmarks/**/*.py" = [
  "D",
  "S311",
  "SIM",
]
lint.extend-per-file-ignores."docs/**/*.py" = [
  "D",
]
lint.extend-per-file-ignores."examples/**/*.py" = [
  "D",
  "S106",
  "S311",
]
lint.extend-per-file-ignores."tests/**/*.py" = [
  "D",
  "E402",
  "S",
  "UP",
]
lint.mccabe.max-complexity = 16

[tool.isort]
profile = "black"

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
design.max-attributes = 8
design.max-locals = 20
design.max-branches = 16
design.max-returns = 8
design.max-args = 10
basic.good-names = [
  "a",
  "b",
  "c",
  "d",
  "e",
  "f",
  "i",
  "j",
  "k",
  "r",
  "v",
  "ex",
  "_",
  "fp",
  "im",
  "nc",
  "ui",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
similarities.min-similarity-lines = 10
messages_control.disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]
log_cli = true
addopts = "-rs --color=yes"
markers = [
  "require_nc: marks a test that requires a minimum version of Nextcloud.",
]
asyncio_mode = "auto"

[tool.coverage.run]
cover_pylib = true
include = [
  "*/nc_py_api/*",
]
omit = [
  "*/tests/*",
]

[tool.coverage.paths]
source = [
  "nc_py_api/",
  "*/site-packages/nc_py_api/",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "DeprecationWarning",
  "DEPRECATED",
]

[tool.mypy]
ignore_missing_imports = false
warn_unreachable = true
warn_no_return = true
strict_optional = true
check_untyped_defs = true
show_error_codes = true
