[metadata]
name = nc_py_api
description = Nextcloud Python Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cloud-py-api/nc_py_api
author = Alexander Piskun
keywords = nextcloud, api, framework
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
license = BSD-3-Clause
project_urls =
    Source=https://github.com/cloud-py-api/nc_py_api

[options]
python_requires = >=3.9
zip_safe = True
packages = find:
install_requires =
    requests==2.31.0
    httpx==0.24.1
    xmltodict==0.13.0
    pydantic==2.0.2
    xxhash==3.2.0
    fastapi==0.100.0

[options.extras_require]
docs =
    sphinx>=4.4
    sphinx-issues>=3.0.1
    sphinx-rtd-theme>=1.0
    sphinx-copybutton
    sphinx-inline-tabs
bench=
    matplotlib
    py-cpuinfo
dev =
    pytest
    pre-commit
    pylint
    coverage
    pillow
    uvicorn

[flake8]
max-line-length = 120
target-version = ["py39"]
ignore =
    E203,
    W503,
per-file-ignores =
    __init__.py: F401, F403
